--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --ssl --ssl-key C:\\localhost.key --ssl-cert C:\\localhost.crt",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
